--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -2,19 +2,28 @@ name: Telegram API Bot
 
 on:
   schedule:
-    - cron: "*/5 * * * *"   # каждые 5 минут
+    - cron: "*/5 * * * *"
   workflow_dispatch:
 
 jobs:
   run:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-      - run: pip install requests
-            - name: Send test message via curl
+
+      - name: Install dependencies
+        run: pip install requests
+
+      - name: Send test message via curl
+        env:
+          BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
+          CHAT_ID: ${{ secrets.CHAT_ID }}
         run: |
           echo "Sending test to Telegram..."
           curl -s "https://api.telegram.org/bot${BOT_TOKEN}/sendMessage" \
@@ -22,12 +31,10 @@ jobs:
             -H "Content-Type: application/json" \
             -d "{\"chat_id\":\"${CHAT_ID}\",\"text\":\"TEST_FROM_ACTIONS_CURL ✅\"}"
           echo ""
-        env:
-          BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
-          CHAT_ID: ${{ secrets.CHAT_ID }}
 
-      - run: python bot.py
+      - name: Run bot
         env:
           BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
           CHAT_ID: ${{ secrets.CHAT_ID }}
           API_URL: ${{ secrets.API_URL }}
+        run: python bot.py
