--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -38,3 +38,14 @@ jobs:
           CHAT_ID: ${{ secrets.CHAT_ID }}
           API_URL: ${{ secrets.API_URL }}
         run: python bot.py
+      - name: Commit state file
+        run: |
+          if [ -f last_hash.txt ]; then
+            git config user.name "github-actions[bot]"
+            git config user.email "github-actions[bot]@users.noreply.github.com"
+            git add last_hash.txt
+            git diff --cached --quiet || git commit -m "Update state"
+            git push
+          else
+            echo "No state file to commit."
+          fi
