--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,36 +1,24 @@
-name: Telegram API Bot
+name: API → Telegram (only if changed)
 
 on:
   schedule:
-    - cron: "*/5 * * * *"
+    - cron: "*/5 * * * *"   # каждые ~5 минут (лимит GitHub)
   workflow_dispatch:
+
+permissions:
+  contents: write
 
 jobs:
   run:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      - name: Install dependencies
-        run: pip install requests
-
-      - name: Send test message via curl
-        env:
-          BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
-          CHAT_ID: ${{ secrets.CHAT_ID }}
-        run: |
-          echo "Sending test to Telegram..."
-          curl -s "https://api.telegram.org/bot${BOT_TOKEN}/sendMessage" \
-            -X POST \
-            -H "Content-Type: application/json" \
-            -d "{\"chat_id\":\"${CHAT_ID}\",\"text\":\"TEST_FROM_ACTIONS_CURL ✅\"}"
-          echo ""
+      - run: pip install requests
 
       - name: Run bot
         env:
@@ -38,14 +26,13 @@ jobs:
           CHAT_ID: ${{ secrets.CHAT_ID }}
           API_URL: ${{ secrets.API_URL }}
         run: python bot.py
-      - name: Commit state file
+
+      - name: Save state
         run: |
           if [ -f last_hash.txt ]; then
             git config user.name "github-actions[bot]"
             git config user.email "github-actions[bot]@users.noreply.github.com"
             git add last_hash.txt
-            git diff --cached --quiet || git commit -m "Update state"
+            git diff --cached --quiet || git commit -m "update state"
             git push
-          else
-            echo "No state file to commit."
           fi
